--- a/css/basic black.css
+++ b/css/basic black.css
@@ -1,29 +1,43 @@
 body{
-	color: #DDD;
-	width: 400px;
-	margin: 0px auto;
 	background-color: black;
-	background-image: url("../images/Screenshot-Frogatto-30.png"), url("../images/Screenshot-Frogatto-28-composit.png");
-	background-position: right top, left top;
-	background-repeat: no-repeat, no-repeat;
 }
 
-p{
+div{
+	color: #DDD;
+	margin: 0px auto;
 }
+div#content{
+	width: 400px;
+	margin-top: 100px;
+}
+div#left-img{
+	background: url("../images/Screenshot-Frogatto-30.png"); 
+	background-repeat: no-repeat; 
+	position: absolute; 
+	top: 150px; 
+	right: 50%; 
+	margin-right: 400px; 
+	width: 1008px; 
+	height: 822px;
+}
+div#right-img{
+	background: url("../images/Screenshot-Frogatto-28-composite.png"); 
+	background-repeat: no-repeat; 
+	position: absolute; 
+	top: 150px; 
+	right: 50%; 
+	margin-right: -1222px; 
+	width: 822px; 
+	height: 1090px;
+}
+
 p#proper{
 	text-indent: 2em;
 }
 p#ul-header{
-	margin-bottom: -16px;
+	margin-bottom: -15px;
 }
 
 ul{
 	list-style-type: square;
-}
-
-img#right-bg-image{
-	float: right;
-}
-img#left-bg-image{
-	float: left;
 }
