--- a/css/basic black.css
+++ b/css/basic black.css
@@ -1,13 +1,13 @@
 body{
 	background-color: black;
+	margin: 0px auto;
+	width: 400px;
+	color: #DDD;
 }
 
 div{
-	color: #DDD;
-	margin: 0px auto;
 }
 div#content{
-	width: 400px;
 	margin-top: 100px;
 }
 div#left-img{
@@ -25,8 +25,8 @@ div#right-img{
 	background-repeat: no-repeat; 
 	position: absolute; 
 	top: 150px; 
-	right: 50%; 
-	margin-right: -1222px; 
+	left: 50%; 
+	margin-left: 400px; 
 	width: 822px; 
 	height: 1090px;
 }
