--- a/css/basic black.css
+++ b/css/basic black.css
@@ -1,15 +1,12 @@
 body{
 	background-color: black;
-	margin: 0px auto;
-	width: 400px;
 	color: #DDD;
-	overflow: hidden;
 }
 
-div{
-}
 div#content{
+	margin: auto;
 	margin-top: 100px;
+	width: 400px;
 }
 div#left-img{
 	background: url("../images/Screenshot-Frogatto-30.png"); 
