Updated site for mac 0.1.0 download.

--- a/css/basic black.css
+++ b/css/basic black.css
@@ -39,3 +39,19 @@ p#ul-header{
 ul{
 	list-style-type: square;
 }
+
+a{
+	text-decoration: underline;
+}
+a:link {
+	color: #DDD;
+}
+a:visited {
+	color: #DDD;
+}
+a:active {
+	color: #FFF; 
+}
+a:hover {
+	color: #FFF;
+}
