Fixed fickle footer.

--- a/css/Grey and Blue.css
+++ b/css/Grey and Blue.css
@@ -248,4 +248,12 @@ a :hover {
 	#icon-bar div {
 		display: none;
 	}
+}	
+
+footer {
+	margin-bottom: -19px;
+	color: rgba(0,0,0,0.1);
+	text-shadow: rgba(0,0,0,0.1) -1px 0, rgba(0,0,0,0.1) 0 -1px,
+	             rgba(255,255,255,0.1) 1px 0, rgba(255,255,255,0.1) 0 1px,
+	             rgba(0,0,0,0.1) -1px -1px, rgba(255,255,255,0.1) 1px 1px;
 }
