--- a/css/Grey and Blue.css
+++ b/css/Grey and Blue.css
@@ -1,3 +1,9 @@
+/* In FF, set ReloadEvery to 5. In bash, go to ~/css/ and run:
+while [ 1 ]; do
+  lessc Grey\ and\ Blue.css.less Grey\ and\ Blue.css;
+  sleep 1;
+done
+*/
 /* Unfortunantly, browsers insist on applying AA to this, rendering it somewhat useless.*/
 /* @font-face {
 	font-family: "Monospace";
@@ -5,255 +11,230 @@
 	font-smooth: never;
 	-webkit-font-smoothing : none;
 } *//*This was blurry, the browser insisted on scaling the font with interpolation.*/
-
 body {
-	background-image: url('data:image/gif;base64,R0lGODdhCAAIAIACALG0uszMzCwAAAAACAAIAAACDQyOZ7kL/mKSjNI2QwEAOw==');
-	padding: 50px;
-	min-width: 150px;
-	max-width: 1000px;
-	margin: auto;
+  background-image: url('data:image/gif;base64,R0lGODdhCAAIAIACALG0uszMzCwAAAAACAAIAAACDQyOZ7kL/mKSjNI2QwEAOw==');
+  padding: 50px;
+  min-width: 150px;
+  max-width: 1000px;
+  margin: auto;
 }
-
 @media (max-width: 480px) {
-	body {
-		padding: calc(53.8% - 200px);
-	}
+  body {
+    padding: calc(-146.2%);
+  }
 }
-
 #content-holder {
-	width: 100%;
-	box-shadow: 0px 0px 50px hsla(220,0%,0%,0.75);
-	/*overflow:hidden;*/ /*Enabling this prevents the h1 from eating the nav images on lower resolutions, and isn't needed at higher resolutions.*/
-}
+  width: 100%;
+  box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.75);
+  /*overflow:hidden;*/
+  /*Enabling this prevents the h1 from eating the nav images on lower resolutions, and isn't needed at higher resolutions.*/
 
+}
 #content-pane {
-	margin: 0px;
-	padding: 3em;
-	padding-top: 3em;
-	margin-top: -11px;
-	border-top: 11px solid rgba(51,119,255,0.5);
-	background: -webkit-gradient(linear, 0 0, 100% 0, from(#C2C5CC), to(#BCB9BF));
-	background: -webkit-linear-gradient(#C2C5CC, #BCB9BF);
-	background: -moz-linear-gradient(#C2C5CC, #BCB9BF);
-	background: -o-linear-gradient(#C2C5CC, #BCB9BF);
-	background: linear-gradient(#C2C5CC, #BCB9BF);
-	background-clip: padding-box;
-	z-index: 1;
+  margin: 0px;
+  padding: 3em;
+  padding-top: 3em;
+  margin-top: -11px;
+  border-top: 11px solid rgba(51, 119, 255, 0.5);
+  background: -webkit-gradient(linear, 0 0, 100% 0, from(#c2c5cc), to(#bcb9bf));
+  background: -webkit-linear-gradient(#c2c5cc, #bcb9bf);
+  background: -moz-linear-gradient(#c2c5cc, #bcb9bf);
+  background: -o-linear-gradient(#c2c5cc, #bcb9bf);
+  background: linear-gradient(#c2c5cc, #bcb9bf);
+  background-clip: padding-box;
 }
-	
 #badge {
-	display: none;
-	position: absolute;
-	overflow: hidden; 
-	height: 135px; /*Set to 146 for ribbon transparency effect.*/
-}
+  display: none;
+  position: absolute;
+  overflow: hidden;
+  height: 135px;
+  /*Set to 146 for ribbon transparency effect.*/
 
+}
 #badge img {
-	width: 325px;
-	height: 325px;
-	-webkit-transform: translate(-25px, -25px) rotate(-20deg);
-	-moz-transform: translate(-25px, -25px) rotate(-20deg);
-	-o-transform: translate(-25px, -25px) rotate(-20deg);
-	transform: translate(-25px, -25px) rotate(-20deg);
-    transform-origin: 50% 50%;
-    opacity: 0.25;
+  width: 325px;
+  height: 325px;
+  -webkit-transform: translate(-25px, -25px) rotate(-20deg);
+  -moz-transform: translate(-25px, -25px) rotate(-20deg);
+  -o-transform: translate(-25px, -25px) rotate(-20deg);
+  transform: translate(-25px, -25px) rotate(-20deg);
+  transform-origin: 50% 50%;
+  opacity: 0.25;
 }
-
 h1 {
-	font-size: 4em;
-	color: #B6C0CC;
-	background-color: #2E2F33;
-	text-align: right;
-	padding: 38px; /*33px*/
-	padding-bottom: 21px;
-	margin: 0px;
-	border-bottom: 11px solid rgba(51,119,255,1.0); /*We only have alpha-over blending, so to simulate the full colour we have the solid blue strip here, which will be overlaid by the large symbol, which will be overlaid by a transparent version of the border.*/
-	Xfont-family: "Monospace"; /*Disabled, this screws up alignment. (It seems stuff is calc'd to 4em.)*/
-}
+  font-size: 4em;
+  color: cHeaderTextColor;
+  background-color: #2e2f33;
+  text-align: right;
+  padding: 38px;
+  /*33px*/
 
+  padding-bottom: 21px;
+  margin: 0px;
+  border-bottom: 11px solid #3377ff;
+  /*We only have alpha-over blending, so to simulate the full colour we have the solid blue strip here, which will be overlaid by the large symbol, which will be overlaid by a transparent version of the border.*/
+
+}
 h2 {
-	margin: 0px;
+  margin: 0px;
 }
-
 h1 img {
-	max-width: 100%;
-	height: auto;
+  max-width: 100%;
+  height: auto;
 }
-	
 a:focus {
-	outline: none;
+  outline: none;
 }
-	
 a :hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
-
 #icon-bar a {
-	text-decoration: none;
+  text-decoration: none;
 }
-
 #icon-bar :hover {
-	text-decoration: underline;
+  text-decoration: underline;
 }
+#icon-bar img {
+  /*These have a native resolution of 500x500. We want to be really sure that they don't get that big, because it's very big.*/
 
-#icon-bar img { /*These have a native resolution of 500x500. We want to be really sure that they don't get that big, because it's very big.*/
-	width: 40px;
-	height: 40px;
-	padding: 5px;
-	margin-right: -4px; /*Mystery value, else they are 53px across.*/
-	margin-bottom: -4px; /*This line -4 for firefox, -5 for chrome for perfect tesselation.*/
-	/*background-color: rgba(255,255,255,0.5)*/ /*For testing.*/
+  width: 40px;
+  height: 40px;
+  padding: 5px;
+  margin-right: -4px;
+  /*Mystery value, else they are 53px across.*/
+
+  margin-bottom: -4px;
+  /*This line -4 for firefox, -5 for chrome for perfect tesselation.*/
+
+  /*background-color: rgba(255,255,255,0.5)*/
+  /*For testing.*/
+
 }
-
 #icon-bar div {
-	clear: none;
-	font-size: 12px;
-	margin: 0;
-	padding-bottom: 11px;
-	height: 9px;
-	width: 100;
-	text-align: center;
+  clear: none;
+  font-size: 12px;
+  margin: 0;
+  padding-bottom: 11px;
+  height: 9px;
+  width: 100;
+  text-align: center;
 }
-
-@media (max-width: 590px) { /*590 is the minimum width "gallery" will fit into the header.*/
-	#icon-bar {
-		float: left;
-		margin: 18px;
-		width: 250px;
-	}
-	
-	h1 {
-		font-size: 1em;
-	}
-	
-	#icon-bar img {
-		float: left;
-	}
-	
-	#icon-bar a {
-		display: block;
-		width: 50px;
-		float: left;
-		color: lightgrey;
-	}
-	
-	#icon-bar div {
-		width: 100%;
-		clear: both;
-	}
+@media (max-width: 590px) {
+  /*590 is the minimum width "gallery" will fit into the header.*/
+  #icon-bar {
+    float: left;
+    margin: 18px;
+    width: 250px;
+  }
+  h1 {
+    font-size: 1em;
+  }
+  #icon-bar img {
+    float: left;
+  }
+  #icon-bar a {
+    display: block;
+    width: 50px;
+    float: left;
+    color: #d3d3d3;
+  }
+  #icon-bar div {
+    width: 100%;
+    clear: both;
+  }
 }
-
 @media (min-width: 591px) and (max-width: 750px) {
-	#icon-bar {
-		float: left;
-		clear: none;
-		width: 100px;
-		margin: 18px;
-	}
-	
-	#icon-bar div {
-		padding-top: 15px;
-		width: 50px;
-	}
-	
-	#icon-bar :hover {
-		color: rgba(255,255,255,1);
-		text-shadow: 0px 0px 5px black;
-		text-decoration: none;
-	}
-
-	#icon-bar a {
-		color: rgba(255,255,255,0);
-	}
-	
-	#icon-bar :nth-child(even) div {
-		float: right;
-		margin-right: -50px;
-		text-align: left;
-	}
-	
-	#icon-bar :nth-child(odd) div {
-		float: left;
-		margin-left: -50px;
-		text-align: right;
-	}
+  #icon-bar {
+    float: left;
+    clear: none;
+    width: 100px;
+    margin: 18px;
+  }
+  #icon-bar div {
+    padding-top: 15px;
+    width: 50px;
+  }
+  #icon-bar :hover {
+    color: #ffffff;
+    text-shadow: 0px 0px 5px #000000;
+    text-decoration: none;
+  }
+  #icon-bar a {
+    color: rgba(255, 255, 255, 0);
+  }
+  #icon-bar :nth-child(even) div {
+    float: right;
+    margin-right: -50px;
+    text-align: left;
+  }
+  #icon-bar :nth-child(odd) div {
+    float: left;
+    margin-left: -50px;
+    text-align: right;
+  }
 }
-
 @media (min-width: 751px) {
-	body {
-		padding-right: 151px; /*50px gutter, 100px icon-bar, 1 px blue border.*/
-	}
-	
-	#icon-bar {
-		width: 100px;
-		height: 100%;
-		position: fixed;
-		top: 0px;
-		right: 0px;
-		background-color: #484B50;
-		border-left: 1px solid rgba(51,119,255,1);
-		box-shadow: 0px 0px 10px hsla(220,0%,0%,1);
-	}
-	
-	#icon-bar :hover {
-		text-decoration: none;
-	}
-	
-	#icon-bar a :hover {
-		box-shadow: inset 0px 0px 10px white;
-	}
-	
-	#icon-bar div {
-		pointer-events: none;
-	}
-	
-	#icon-bar a {
-		color: lightgrey;
-	}
-	
-	#icon-bar :nth-last-child(odd) img {
-		background-color: #6C7175;
-	}
-
-	#icon-bar img {
-		width: 70px;
-		height: 70px;
-		padding: 15px;
-		margin-bottom: -24px;
-		padding-top: 10px;
-		padding-bottom: 20px;
-	}
-	
-	#badge {
-		display: block;
-	}
+  body {
+    padding-right: 151px;
+    /*50px gutter, 100px icon-bar, 1 px blue border.*/
+  
+  }
+  #icon-bar {
+    width: 100px;
+    height: 100%;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    background-color: #484b50;
+    border-left: 1px solid #3377ff;
+    box-shadow: 0px 0px 10px #000000;
+  }
+  #icon-bar :hover {
+    text-decoration: none;
+  }
+  #icon-bar a :hover {
+    box-shadow: inset 0px 0px 10px #ffffff;
+  }
+  #icon-bar div {
+    pointer-events: none;
+  }
+  #icon-bar a {
+    color: #d3d3d3;
+  }
+  #icon-bar :nth-last-child(odd) img {
+    background-color: #6c7175;
+  }
+  #icon-bar img {
+    width: 70px;
+    height: 70px;
+    padding: 15px;
+    margin-bottom: -24px;
+    padding-top: 10px;
+    padding-bottom: 20px;
+  }
+  #badge {
+    display: block;
+  }
 }
-
 @media (max-width: 260px) {
-	#icon-bar {
-		width: 100%;
-	}
-	
-	#icon-bar img {
-		width: 80%;
-		height: auto;
-		padding: 15%;
-		padding-bottom: 5px;
-	}
-	
-	#icon-bar a {
-		width: 20%;
-	}
-	
-	#icon-bar div {
-		display: none;
-	}
-}	
-
+  #icon-bar {
+    width: 100%;
+  }
+  #icon-bar img {
+    width: 80%;
+    height: auto;
+    padding: 15%;
+    padding-bottom: 5px;
+  }
+  #icon-bar a {
+    width: 20%;
+  }
+  #icon-bar div {
+    display: none;
+  }
+}
 footer {
-	margin-bottom: -19px;
-	color: rgba(0,0,0,0.1);
-	text-shadow: rgba(0,0,0,0.1) -1px 0, rgba(0,0,0,0.1) 0 -1px,
-	             rgba(255,255,255,0.1) 1px 0, rgba(255,255,255,0.1) 0 1px,
-	             rgba(0,0,0,0.1) -1px -1px, rgba(255,255,255,0.1) 1px 1px;
+  margin-bottom: -19px;
+  color: rgba(0, 0, 0, 0.3);
+  text-shadow: rgba(0, 0, 0, 0.1) -1px 0, rgba(0, 0, 0, 0.1) 0 -1px, rgba(255, 255, 255, 0.1) 1px 0, rgba(255, 255, 255, 0.1) 0 1px, rgba(0, 0, 0, 0.1) -1px -1px, rgba(255, 255, 255, 0.1) 1px 1px;
 }
