--- a/blog.html.haml
+++ b/blog.html.haml
@@ -1,3 +1,11 @@
+:ruby
+	def blogContent
+		buffer = Dir.glob(Dir.getwd+'/Blog Posts/*.html').
+			sort!.last(5000).reverse!. #We won't figure out multiple pages until we have to.
+			map!{|f| File.read(f)}.
+			join
+	end
+
 !!!
 %html{"lang"=>"en"}
 	%head
@@ -24,11 +32,5 @@
 		#content-holder
 			%h1<
 				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
-			#content-pane
-				%h2 Blog Post #2
-				%p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-				%p PART 2: Again! Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-				%h2 Blog Post #1
-				%p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			#content-pane=blogContent
 	%footer	This site ©2013 David Roberts.
