--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -26,7 +26,7 @@ done
 @cContentBottomGrey: #BCB9BF;
 
 //header
-@cHeaderTextColor: cHeaderTextColor;
+@cHeaderTextColor: #B7BECE;
 @cHeaderColor: #2E2F33;
 
 //icon bar (may be in header)
@@ -46,7 +46,7 @@ done
 
 
 body {
-	background-image: url('data:image/gif;base64,R0lGODdhCAAIAIACALG0uszMzCwAAAAACAAIAAACDQyOZ7kL/mKSjNI2QwEAOw==');
+	background-image: url('data:image/gif;base64,R0lGODlhJAASAKEAALG0uszMzLG0urG0uiH5BAEKAAIALAAAAAAkABIAAAJHTICpaHwLW5LxKbrwtUBn7kGOKIZkx52fOk7p6pKmN4Nv1aqmfp/GHkOxhEEczIgkymxD4HK4gSpZGGC1V0tGi76Hcyr9bgoAOw==');
 	padding: 50px;
 	min-width: 150px;
 	max-width: 1000px;
@@ -150,7 +150,7 @@ a :hover {
 	margin: 0;
 	padding-bottom: 11px;
 	height: 9px;
-	width: 100;
+	width: 100px;
 	text-align: center;
 }
 
