Added roads to easter egg.

--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -37,4 +37,6 @@
 		This site ©2013 David Roberts.
 		-#Launch the background city simulation. It should show up after a few minuites of idleness, so there's no reason to wait on it loading before we render the page.
 		%canvas{"id"=>"background-city", "width"=>0, "height"=>0}
-		%script{"src"=>"scripts/background city.js"}
+		%script{"src"=>"http://code.jquery.com/jquery-2.0.0.min.js"}
+		%script{"src"=>"http://code.createjs.com/preloadjs-0.3.0.min.js"}
+		%script{"src"=>"background town/setup.js"}
