--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -63,6 +63,7 @@ body {
 	width: 100%;
 	box-shadow: 0px 0px 50px @cContentBackgroundShadow;
 	/*overflow:hidden;*/ /*Enabling this prevents the h1 from eating the nav images on lower resolutions, and isn't needed at higher resolutions.*/
+	opacity: 0.25; //TODO: Disable later.
 }
 
 #content-pane {
@@ -95,7 +96,6 @@ body {
 	transform: @gMove;
 	transform-origin: 50% 50%;
 	@gMove: translate(-25px, -25px) rotate(-20deg);
-	opacity: 0.25;
 }
 
 h1 {
