Added a pull-tab to let you find the bonus content.

--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -63,7 +63,7 @@ body {
 	width: 100%;
 	box-shadow: 0px 0px 50px @cContentBackgroundShadow;
 	/*overflow:hidden;*/ /*Enabling this prevents the h1 from eating the nav images on lower resolutions, and isn't needed at higher resolutions.*/
-	opacity: 0.25; //TODO: Disable later.
+	//opacity: 0.25; //TODO: Disable later.
 }
 
 #content-pane {
