Made it so that the easter-egg city slowly expands by itself, and so that you can drag out roads and expand it yourself.

--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -294,3 +294,11 @@ footer {
 	color: @cFooterIntensity;
 	text-shadow: @sInsetText;
 }
+
+footer img {
+	pointer-events: auto;
+}
+
+#background-city {
+	pointer-events: auto;
+}
