--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -31,8 +31,8 @@
 				%div rss
 		#content-holder
 			%h1<
-				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
-			#content-pane ❹❍❹: Gallery Not Found.
+				%img{"src"=>"images/text-gallery.png", "alt"=>"gallery"}
+			#content-pane TODO: Content.
 	%footer
 		This site ©2013 David Roberts.
 		-#Launch the background city simulation. It should show up after a few minuites of idleness, so there's no reason to wait on it loading before we render the page.
