--- a/css/Grey and Blue.css
+++ b/css/Grey and Blue.css
@@ -237,3 +237,9 @@ footer {
   color: rgba(0, 0, 0, 0.3);
   text-shadow: rgba(0, 0, 0, 0.1) -1px 0, rgba(0, 0, 0, 0.1) 0 -1px, rgba(255, 255, 255, 0.1) 1px 0, rgba(255, 255, 255, 0.1) 0 1px, rgba(0, 0, 0, 0.1) -1px -1px, rgba(255, 255, 255, 0.1) 1px 1px;
 }
+footer img {
+  pointer-events: auto;
+}
+#background-city {
+  pointer-events: auto;
+}
