--- a/contact.html.haml
+++ b/contact.html.haml
@@ -33,4 +33,4 @@
 			%h1<
 				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
 			#content-pane You can reach me at robertsdavidddr@gmail.com, on Github as DDR0, or on IRC as DDR on freenode.net.
-	%footer	This site ©2013 David Roberts.
+	%footer	Site ©2013 David Roberts.
