--- a/feeds.html.haml
+++ b/feeds.html.haml
@@ -25,4 +25,4 @@
 			%h1<
 				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
 			#content-pane No RSS yet.
-	%footer	This site ©2013 David Roberts.
+	%footer	Site ©2013 David Roberts.
