--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -34,7 +34,7 @@
 				%img{"src"=>"images/text-gallery.png", "alt"=>"gallery"}
 			#content-pane TODO: Content.
 	%footer
-		This site ©2013 David Roberts.
+		Site ©2013 David Roberts.
 		-#Launch the background city simulation. It should show up after a few minuites of idleness, so there's no reason to wait on it loading before we render the page.
 		%a{"src"=>"images/easter-egg pull.svg", "style"=>"float: right; margin-right: 20%;", "onclick"=>"window.city.toggleVisibility()", "href"=>"#"}
 			%img{"src"=>"images/easter-egg pull.svg"}
