--- a/css/Grey and Blue.css.less
+++ b/css/Grey and Blue.css.less
@@ -79,6 +79,11 @@ body {
 	background: linear-gradient(@cContentTopGrey, @cContentBottomGrey);
 	background-clip: padding-box;
 }
+
+#content-pane a {
+	color: black;
+	text-decoration: underline;
+}
 	
 #badge {
 	display: none;
@@ -302,12 +307,4 @@ footer {
 	margin-bottom: -19px;
 	color: @cFooterIntensity;
 	text-shadow: @sInsetText;
-}
-
-footer img {
-	pointer-events: auto;
-}
-
-#background-city {
-	pointer-events: auto;
 }
