--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -11,16 +11,16 @@
 			-#This is the background icon to display.
 		#icon-bar
 			%a{"href"=>"blog.html"}<
-				%img{"src"=>"images/icons/page.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/page.svg", "alt"=>"Blog"}>
 				%div blog
 			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/work.svg", "alt"=>"Gallery"}>
 				%div gallery
 			%a{"href"=>"contact.html"}<
-				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/chat2.svg", "alt"=>"Contact"}>
 				%div contact
 			%a{"href"=>"feeds.html"}<
-				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/rss.svg", "alt"=>"RSS"}>
 				%div rss
 		#content-holder
 			%h1<
@@ -28,19 +28,17 @@
 			#content-pane<
 				/Oh, wouldn't it be nice to be able to define a height variable here… but can't do that.
 				%div{style:"min-height:300px;"}
-					<a href="http://www.frogatto.com/"><img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="right"></a>
+					<a href="http://www.frogatto.com/"><img src="images/gallery/frogatto forest-crossroads.png" width=400 height=300></a>
+					/%section{"style"=>"float:left;"}
 					%h2 Frogatto &&nbsp;Friends
 					%p Frogatto and friends is a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.
 				%hr
-				%p{style:"min-height:300px;"}
-					<img src="images/gallery/frogatto forest-crossroads.png", width=400, height=300, align="left">This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side. This is a test of text and image, side by side.
-				
-	%footer
-		Site ©2013 David Roberts.
-		-#Launch the background city simulation after the page has loaded. It should show up after a few minuites of idleness anyway, so there's no reason to wait on it loading before we render the page.
-		%a{"src"=>"images/easter-egg pull.svg", "style"=>"float: right; margin-right: 20%;", "onclick"=>"window.city.toggleVisibility()", "href"=>"#"}
-			%img{"src"=>"images/easter-egg pull.svg"}
-		%canvas{"id"=>"background-city", "width"=>0, "height"=>0}
-		%script{"src"=>"http://code.jquery.com/jquery-2.0.0.min.js"}
-		%script{"src"=>"http://code.createjs.com/preloadjs-0.3.0.min.js"}
-		%script{"src"=>"background town/setup.js"}
+		%footer
+			Site ©2013 David Roberts.
+			-#Launch the background city simulation after the page has loaded. It should show up after a few minuites of idleness anyway, so there's no reason to wait on it loading before we render the page.
+			%a{"style"=>"float: right; margin-right: 20%;", "onclick"=>"window.city.toggleVisibility()", "href"=>"#"}
+				%img{"src"=>"images/easter-egg pull.svg"}
+			%canvas{"id"=>"background-city", "width"=>0, "height"=>0}
+			%script{"src"=>"http://code.jquery.com/jquery-2.0.0.min.js"}
+			%script{"src"=>"http://code.createjs.com/preloadjs-0.3.0.min.js"}
+			%script{"src"=>"background town/setup.js"}
