--- a/css/Gallery.css.less
+++ b/css/Gallery.css.less
@@ -9,3 +9,11 @@ footer img {
 h2 {
 	text-align: center;
 }
+
+#content-pane img {
+	float:right;
+}
+
+#content-pane img :nth-child(odd) { //Flip. This doesn't work here.
+	float:right;
+}
