--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -7,9 +7,14 @@ footer img {
 h2 {
   text-align: center;
 }
-#content-pane img {
-  float: right;
+.left {
+  float: left;
+  margin-right: 2ex;
 }
-#content-pane img :nth-child(odd) {
+.right {
   float: right;
+  margin-left: 2ex;
+}
+iframe {
+  border: 0 solid transparent;
 }
