Made all four main pages use their correct images. Removed empty alt text attributes.

--- a/blog.html.haml
+++ b/blog.html.haml
@@ -17,20 +17,20 @@
 		%link{"rel"=>"stylesheet", "href"=>"css/Blog.css"}
 	%body
 		#badge<
-			%img{"src"=>"images/icons/page.svg", "alt"=>""}> 
+			%img{"src"=>"images/icons/page.svg"}> 
 			-#This is the background icon to display.
 		#icon-bar
-			%a<
-				%img{"src"=>"images/icons/page.svg", "alt"=>""}>
+			%a{}<
+				%img{"src"=>"images/icons/page.svg"}>
 				%div blog
 			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/work.svg"}>
 				%div gallery
 			%a{"href"=>"contact.html"}<
-				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/chat2.svg"}>
 				%div contact
 			%a{"href"=>"feeds.html"}<
-				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/rss.svg"}>
 				%div rss
 		#content-holder
 			%h1<
