--- a/feeds.html.haml
+++ b/feeds.html.haml
@@ -6,23 +6,23 @@
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 	%body
 		#badge<
-			%img{"src"=>"images/icons/page.svg", "alt"=>""}> 
+			%img{"src"=>"images/icons/rss.svg"}> 
 			-#This is the background icon to display.
 		#icon-bar
 			%a{"href"=>"blog.html"}<
-				%img{"src"=>"images/icons/page.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/page.svg"}>
 				%div blog
 			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/work.svg"}>
 				%div gallery
 			%a{"href"=>"contact.html"}<
-				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/chat2.svg"}>
 				%div contact
-			%a<
-				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
+			%a{}<
+				%img{"src"=>"images/icons/rss.svg"}>
 				%div rss
 		#content-holder
 			%h1<
-				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
+				%img{"src"=>"images/text-feeds.png", "alt"=>"feeds"}
 			#content-pane No RSS yet.
 	%footer	Site ©2013 David Roberts.
