--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -7,20 +7,20 @@
 		%link{"rel"=>"stylesheet", "href"=>"css/Gallery.css"}
 	%body
 		#badge<
-			%img{"src"=>"images/icons/page.svg", "alt"=>""}> 
+			%img{"src"=>"images/icons/work.svg"}> 
 			-#This is the background icon to display.
 		#icon-bar
 			%a{"href"=>"blog.html"}<
-				%img{"src"=>"images/icons/page.svg", "alt"=>"Blog"}>
+				%img{"src"=>"images/icons/page.svg"}>
 				%div blog
-			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg", "alt"=>"Gallery"}>
+			%a{}<
+				%img{"src"=>"images/icons/work.svg"}>
 				%div gallery
 			%a{"href"=>"contact.html"}<
-				%img{"src"=>"images/icons/chat2.svg", "alt"=>"Contact"}>
+				%img{"src"=>"images/icons/chat2.svg"}>
 				%div contact
 			%a{"href"=>"feeds.html"}<
-				%img{"src"=>"images/icons/rss.svg", "alt"=>"RSS"}>
+				%img{"src"=>"images/icons/rss.svg"}>
 				%div rss
 		#content-holder
 			%h1<
