--- a/contact.html.haml
+++ b/contact.html.haml
@@ -14,23 +14,23 @@
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 	%body
 		#badge<
-			%img{"src"=>"images/icons/page.svg", "alt"=>""}> 
+			%img{"src"=>"images/icons/chat2.svg"}> 
 			-#This is the background icon to display.
 		#icon-bar
 			%a{"href"=>"blog.html"}<
-				%img{"src"=>"images/icons/page.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/page.svg"}>
 				%div blog
 			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/work.svg"}>
 				%div gallery
-			%a<
-				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
+			%a{}<
+				%img{"src"=>"images/icons/chat2.svg"}>
 				%div contact
 			%a{"href"=>"feeds.html"}<
-				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
+				%img{"src"=>"images/icons/rss.svg"}>
 				%div rss
 		#content-holder
 			%h1<
-				%img{"src"=>"images/text-blog.png", "alt"=>"blog"}
+				%img{"src"=>"images/text-contact.png", "alt"=>"contact"}
 			#content-pane You can reach me at robertsdavidddr@gmail.com, on Github as DDR0, or on IRC as DDR on freenode.net.
 	%footer	Site ©2013 David Roberts.
