--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -28,14 +28,14 @@
 			#content-pane
 				/Oh, wouldn't it be nice to be able to define a height variable here… but can't do that.
 				%div{style:"min-height:300px;"}
-					<a href="http://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png" width=400 height=300></a>
+					<a href="http://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png"></a>
 					%h2 Frogatto &&nbsp;Friends
 					%p This a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.
 				%hr
 				%script{"src"=>"http://code.jquery.com/jquery-2.0.0.min.js"}
 				%div{style:"min-height:322px;"}
 					/Measured width/height is 641, 643. Half that is 320, 321. We have two margins, so half that is 160/161. Margin right is +2ex.
-					%iFrame{class:"cover left", id:"candy-crush", src:"Candy Crunch/minimal.html", width:641, height:643, style:"-webkit-transform:scale(0.5,0.5); transform:scale(0.5,0.5); margin-left:-161px; margin-right:-150px; margin-top:-161px; margin-bottom:-161px;"}
+					%iFrame{class:"cover left", id:"candy-crush", src:"Candy Crunch/minimal.html", width:641, height:643, style:"-webkit-transform:scale(0.5,0.5); transform:scale(0.5,0.5); margin-left:-161px; margin-right:-150px; margin-top:-161px; margin-bottom:-161px; max-width:200%;"}
 					%h2 Candy Crunch
 					%p Over the course of two weeks in the spring of 2013, I was commissioned by a company called <a href="http://ayogo.com">Ayogo</a> to program a match-3 game. Candy Crunch was the outcome. Match more than three candies together to score a bonus. There is also a <a href="Candy Crunch/index.html">double-sized version</a>. You can <button onclick="$('#candy-crush')[0].contentWindow.location.reload()">restart</button> the game.
 				%hr
