--- a/css/Grey and Blue.css
+++ b/css/Grey and Blue.css
@@ -23,6 +23,18 @@ body {
     padding: calc(-146.2%);
   }
 }
+#skip-nav {
+  color: transparent;
+  position: absolute;
+}
+#skip-nav:active,
+#skip-nav:focus {
+  color: white;
+  text-shadow: black 0 0 2px;
+}
+#skip-nav:hover {
+  cursor: default;
+}
 #content-holder {
   width: 100%;
   box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.75);
@@ -54,6 +66,7 @@ body {
   height: 135px;
   /*Set to 146 for ribbon transparency effect.*/
 
+  pointer-events: none;
 }
 #badge img {
   width: 325px;
