--- a/feeds.html.haml
+++ b/feeds.html.haml
@@ -2,7 +2,7 @@
 %html{"lang"=>"en"}
 	%head
 		%meta{"charset"=>"utf-8"}
-		%title Status
+		%title RSS Feeds
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 	%body
 		%a{id:"skip-nav", href:"#content"}Skip navigation.
