--- a/blog.html.haml
+++ b/blog.html.haml
@@ -12,7 +12,7 @@
 %html{"lang"=>"en"}
 	%head
 		%meta{"charset"=>"utf-8"}
-		%title Status
+		%title Blog
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 		%link{"rel"=>"stylesheet", "href"=>"css/Blog.css"}
 	%body
