--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -2,7 +2,7 @@
 %html{"lang"=>"en"}
 	%head
 		%meta{"charset"=>"utf-8"}
-		%title Status
+		%title Gallery
 		%link{"rel"=>"stylesheet", "href"=>"css/Grey and Blue.css"}
 		%link{"rel"=>"stylesheet", "href"=>"css/Gallery.css"}
 	%body
