--- a/css/Blog.css.less
+++ b/css/Blog.css.less
@@ -23,3 +23,7 @@
 #content-pane a.lp:after { //It was this or !important, to override the previous a:after.
 	content: url("../images/icons/lets play.svg");
 }
+
+#content-pane > p {
+	text-indent: 2em;
+}
