Added empty alt text to the header images because (according to spec) that's how you say 'skip entirely if unable to render' or something. Basically marks as 'unimportant'. And they are -- they're always backed up by text. Except maybe for the middle mode. So we'll hope that if something's not displaying the images, it's not going to do the CSS that says 'invisible' either.

--- a/feeds.html.haml
+++ b/feeds.html.haml
@@ -7,20 +7,20 @@
 	%body
 		%a{id:"skip-nav", href:"#content"}Skip navigation.
 		#badge<
-			%img{"src"=>"images/icons/rss.svg"}> 
+			%img{"src"=>"images/icons/rss.svg", "alt"=>""}> 
 			-#This is the background icon to display.
 		#icon-bar
 			%a{"href"=>"blog.html"}<
-				%img{"src"=>"images/icons/page.svg"}>
+				%img{"src"=>"images/icons/page.svg", "alt"=>""}>
 				%div blog
 			%a{"href"=>"gallery.html"}<
-				%img{"src"=>"images/icons/work.svg"}>
+				%img{"src"=>"images/icons/work.svg", "alt"=>""}>
 				%div gallery
 			%a{"href"=>"contact.html"}<
-				%img{"src"=>"images/icons/chat2.svg"}>
+				%img{"src"=>"images/icons/chat2.svg", "alt"=>""}>
 				%div contact
 			%a{"href"=>"feeds.html"}<
-				%img{"src"=>"images/icons/rss.svg"}>
+				%img{"src"=>"images/icons/rss.svg", "alt"=>""}>
 				%div rss
 		#content-holder
 			%h1<
