--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -28,21 +28,36 @@
 				%img{"src"=>"images/text-gallery.png", "alt"=>"gallery"}
 			%a{name:"content"}
 			#content-pane
+				/// FROGATTO ///
 				/Oh, wouldn't it be nice to be able to define a height variable here… but can't do that.
 				%div{style:"min-height:300px;"}
 					<a href="http://www.frogatto.com/"><img class="cover right" src="images/gallery/frogatto forest-crossroads (small).png"></a>
 					%h2 Frogatto &&nbsp;Friends
 					%p This a beautiful 2D platformer which I have been working on since 2009. You can buy it on <a href="http://www.frogatto.com/">Frogatto.com</a> for $9.99. <a href="http://en.wikipedia.org/wiki/Digital_rights_management">DRM</a>-free. 10+ hours of gameplay. No internet connection required. Hand-pixelled artwork. Family-friendly. Source available on <a href="https://github.com/frogatto/frogatto/">github</a>.
+
 				%hr
+				
+				/// CANDY CRUNCH ///
 				%script{"src"=>"http://code.jquery.com/jquery-2.0.0.min.js"}
 				%div{style:"min-height:322px;"}
 					/Measured width/height is 641, 643. Half that is 320, 321. We have two margins, so half that is 160/161. Margin right is +2ex.
 					%iFrame{class:"cover left", id:"candy-crush", src:"Candy Crunch/minimal.html", width:641, height:643, style:"-webkit-transform:scale(0.5,0.5); transform:scale(0.5,0.5); margin-left:-161px; margin-right:-150px; margin-top:-161px; margin-bottom:-161px; max-width:200%;"}
 					%h2 Candy Crunch
 					%p Over the course of two weeks in the spring of 2013, I was commissioned by a company called <a href="http://ayogo.com">Ayogo</a> to program a match-3 game. Candy Crunch was the outcome. Match more than three candies together to score a bonus. There is also a <a href="Candy Crunch/index.html">double-sized version</a>. You can <button onclick="$('#candy-crush')[0].contentWindow.location.reload()">restart</button> the game.
+
 				%hr
+				
+				/// CUBE TRAINS ///
 				%div{style:"min-height:300px;"}
-					%iFrame{class:"cover right", id:"editabled", src:"https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html", width:400, height:300, onclick:"$('#editabled')[0].focus()"}
+					<a href="http://cubetrains.com/index.html#Downloads"><img class="cover right" src="images/gallery/cube trains.jpeg"></a>
+					%h2 Cube Trains
+					%p A 3D puzzle game with a train theme, which I made over the course of 2011. It features roughly a dozen puzzles of varying difficulty, and has an expansion pack which grants 11 more. While I considered it rather nice, it was a commercial failure. Comes with editor & player. Code on <a href="https://github.com/DDR0/Cube_Trains">github</a>. Free of digital rights management software.
+
+				%hr
+				
+				/// EDITABLED ///
+				%div{style:"min-height:300px;"}
+					%iFrame{class:"cover left", id:"editabled", src:"https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html", width:400, height:300, onclick:"$('#editabled')[0].focus()"}
 					%h2 Editabled Pre-Alpha
 					%p An editable pixel editor. Eventually. You can draw sharp lines on it with your mouse and non-destructively move around with the arrow keys. (Hold alt and click on the example to grant it keyboard focus.) Infinite scroll in any direction. Features a custom multi-threaded compositing engine. You can <button onclick="var e = $('#editabled')[0]; e.src = e.src; //Basically, we're not allowed to reload the window content here because it's not of this domain. Perhaps we should, uh, make it so. Considering this is what it was meant for.">clear</button> the canvas if you've messed up, since there is no ereaser yet. There is a <a href="https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html">full-screen version</a>.
 		%footer
