--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -51,7 +51,7 @@
 				%div{style:"min-height:300px;"}
 					<a href="http://cubetrains.com/index.html#Downloads"><img class="cover right" src="images/gallery/cube trains.jpeg"></a>
 					%h2 Cube Trains
-					%p A 3D puzzle game with a train theme, which I made over the course of 2011. It features roughly a dozen puzzles of varying difficulty, and has an expansion pack which grants 11 more. While I considered it rather nice, it was a commercial failure. Comes with editor & player. Code on <a href="https://github.com/DDR0/Cube_Trains">github</a>. Free of digital rights management software.
+					%p A 3D puzzle game with a train theme, which I made over the course of 2011. It features roughly a dozen puzzles of varying difficulty, and has an expansion pack which grants 11 more. While I considered it rather nice, it was a commercial failure. Comes with editor & player. Code on <a href="https://github.com/DDR0/Cube_Trains">Github</a>. No digital rights management software included.
 
 				%hr
 				
@@ -60,6 +60,15 @@
 					%iFrame{class:"cover left", id:"editabled", src:"https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html", width:400, height:300, onclick:"$('#editabled')[0].focus()"}
 					%h2 Editabled Pre-Alpha
 					%p An editable pixel editor. Eventually. You can draw sharp lines on it with your mouse and non-destructively move around with the arrow keys. (Hold alt and click on the example to grant it keyboard focus.) Infinite scroll in any direction. Features a custom multi-threaded compositing engine. You can <button onclick="var e = $('#editabled')[0]; e.src = e.src; //Basically, we're not allowed to reload the window content here because it's not of this domain. Perhaps we should, uh, make it so. Considering this is what it was meant for.">clear</button> the canvas if you've messed up, since there is no ereaser yet. There is a <a href="https://dl.dropboxusercontent.com/u/138485812/editabled/fullscreen.html">full-screen version</a>.
+
+				%hr
+				
+				/// CUBE TRAINS ///
+				%div{style:"min-height:300px;"}
+					<a href="https://github.com/DDR0/open_pixel_platformer"><img class="cover right" src="images/gallery/open platformer project jungle test level mod.png"></a>
+					%h2 Open Pixel Platformer
+					%p This project aims to make a free, open-source platformer for coders and artists to use as a resource. I lead the programming side of the project. Code on <a href="https://github.com/DDR0/open_pixel_platformer">Github</a>. Discussion is at a <a href="http://www.pixeljoint.com/forum/forum_topics.asp?FID=23">sub-forum on PixelJoint</a>.
+
 		%footer
 			Site ©2013 David Roberts.
 			-#Launch the background city simulation after the page has loaded. It should show up after a few minuites of idleness anyway, so there's no reason to wait on it loading before we render the page.
