--- a/css/Gallery.css
+++ b/css/Gallery.css
@@ -1,23 +1,29 @@
-footer img {
-  pointer-events: auto;
-}
-#background-city {
-  pointer-events: auto;
-}
-h2 {
-  text-align: center;
-}
-.cover {
+#content-pane img {
   max-width: 100%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  clear: both;
 }
-.left {
-  float: left;
-  margin-right: 2ex;
+#content-pane figure {
+  margin: 0px;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.2);
 }
-.right {
-  float: right;
-  margin-left: 2ex;
+#content-pane figcaption {
+  padding-bottom: 1em;
 }
-iframe {
-  border: 0 solid transparent;
+#content-pane .external:after {
+  content: url("../images/icons/external link.svg");
+  margin-right: 2px;
+  margin-left: 2px;
+}
+#content-pane a:hover {
+  text-shadow: 1px 1px 2px black, 0 0 1em blue, 0 0 0.2em blue;
+}
+#content-pane .lp:after {
+  content: url("../images/icons/lets play.svg");
+}
+#content-pane > p {
+  text-indent: 2em;
 }
