--- a/gallery.html.haml
+++ b/gallery.html.haml
@@ -49,7 +49,7 @@
 				
 				/// CUBE TRAINS ///
 				%div{style:"min-height:300px;"}
-					<a href="http://cubetrains.com/index.html#Downloads"><img class="cover right" src="images/gallery/cube trains.jpeg"></a>
+					<a href="cube trains/index.html"><img class="cover right" src="images/gallery/cube trains.jpeg"></a>
 					%h2 Cube Trains
 					%p A 3D puzzle game with a train theme, which I made over the course of 2011. It features roughly a dozen puzzles of varying difficulty, and has an expansion pack which grants 11 more. While I considered it rather nice, it was a commercial failure. Comes with editor & player. Code on <a href="https://github.com/DDR0/Cube_Trains">Github</a>. No digital rights management software included.
 
